Fix: tillater flere FraværPeriode.aktivitetFravær (#298)